0x02-huffman_coding/c
there are a lot of error:

vagrant@vagrant:~/holbertonschool-system_algorithms/0x02-huffman_coding$ gcc -Wall -Wextra -Werror -pedantic -Iheap/ -I./ heap/*.c 8-main.c symbol.c huffman_priority_queue.c huffman_extract_and_insert.c huffman_tree.c binary_tree_print.c -o huffman_tree
huffman_extract_and_insert.c: In function 'huffman_extract_and_insert':
huffman_extract_and_insert.c:26:15: error: incompatible types when assigning to type 'symbol_t' {aka 'struct symbol_s'} from type 'symbol_t *' {aka 'struct symbol_s *'}
   26 |  new_symbol = symbol_create(-1, new_freq);
      |               ^~~~~~~~~~~~~
huffman_extract_and_insert.c:27:17: error: invalid operands to binary == (have 'symbol_t' {aka 'struct symbol_s'} and void *')
   27 |  if (new_symbol == NULL)
      |                 ^~
huffman_extract_and_insert.c:29:2: error: 'new_node' undeclared (first use in this function)
   29 |  new_node = binary_tree_node(NULL, new_symbol);
      |  ^~~~~~~~
huffman_extract_and_insert.c:29:2: note: each undeclared identifier is reported only once for each function it appears in
huffman_extract_and_insert.c:29:36: error: incompatible type for argument 2 of 'binary_tree_node'
   29 |  new_node = binary_tree_node(NULL, new_symbol);
      |                                    ^~~~~~~~~~
      |                                    |
      |                                    symbol_t {aka struct symbol_s}
In file included from huffman.h:4,
                 from huffman_extract_and_insert.c:1:
heap/heap.h:37:21: note: expected 'void *' but argument is of type 'symbol_t' {aka 'struct symbol_s'}
   37 | binary_tree_node_t *binary_tree_node(binary_tree_node_t *parent, void *data);
      |                     ^~~~~~~~~~~~~~~~
huffman_extract_and_insert.c:32:15: error: incompatible type for argument 1 of 'symbol_free'
   32 |   symbol_free(new_symbol);
      |               ^~~~~~~~~~
      |               |
      |               symbol_t {aka struct symbol_s}
In file included from huffman_extract_and_insert.c:1:
huffman.h:21:24: note: expected 'void *' but argument is of type 'symbol_t' {aka 'struct symbol_s'}
   21 | void symbol_free(void *data);
      |                  ~~~~~~^~~~
huffman_tree.c: In function 'huffman_tree':
huffman_tree.c:19:41: error: passing argument 2 of 'heap_delete' from incompatible pointer type [-Werror=incompatible-pointer-types]
   19 |             heap_delete(priority_queue, binary_tree_delete);
      |                                         ^~~~~~~~~~~~~~~~~~
      |                                         |
      |                                         void (*)(binary_tree_node_t *, void (*)(void *)) {aka void (*)(struct binary_tree_node_s *, void (*)(void *))}
In file included from huffman.h:4,
                 from huffman_tree.c:1:
heap/heap.h:41:39: note: expected 'void (*)(void *)' but argument is of type 'void (*)(binary_tree_node_t *, void (*)(void *))' {aka 'void (*)(struct binary_tree_node_s *, void (*)(void *))'}
   41 | void heap_delete(heap_t *heap, void (*free_data)(void *));
      |                                ~~~~~~~^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
